test/samples/invalid/resolving/missing_id.maruir
fun foo(a: uint8)
locals b: uint8;
{
    entry:
        b := a + c;
        return;
}